--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -1,6 +1,7 @@
 <div class="container-fluid">
   <div class="row">
     <div class="form-style">
+    <h1><%= @specialty.name rescue "" %></h1>
     <h1>Add a New Task</h1>
     <%= render 'form' %>
     <%= link_to 'Back', project_specialty_path(@project, @specialty) %>
