--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,8 +2,8 @@
 
   <div class="banner-content">
     <div class="text-center" style="color: black" width="100">
-      <h3> harmony </h3>
-      <h1> success borne of communication, clear goals, and working </h1>
+      <h3> Harmony </h3>
+      <h1> Success borne of communication, clear goals, and working </h1>
       <p> — <i>together</i>.— </p>
     </div>
   </div>
@@ -59,70 +59,53 @@
 
   <div class="banner-content">
     <div class="text-center" style="color: black" width="100">
-      <h3> tried-and-true reviews | check out the buzz: </h3>
-      <p> — you guys aren't shy. alas, neither are we — </p>
+      <h3> Tried-and-true reviews | Check out the buzz: </h3>
+      <p> — You guys aren't shy. alas, neither are we — </p>
     </div>
   </div>
 
   <!-- REVIEWS TABLE (FAKE but keep code in case someone wants to utilize it later) -->
 
-  <div class="container" style="background-color: #f7f2f2">
-    <div class="reviews-product">
-      <div class='reviews-product-upvote'></div>
-      <img src='https://kitt.lewagon.com/placeholder/users/alex-felix' class="product-image"/>
-      <div class='reviews-product-body'>
-        <h3>Dan, Contractor</h3>
-        <p>Fantastic app! Gets it done day in, day out!</p>
+  <div class="container review-container">
+      <div>
+        <div class="review-wrapper">
+            <div>
+              <img src='https://kitt.lewagon.com/placeholder/users/alex-felix' class="avatar"/>
+            </div>
+            <h3>Dan, Contractor</h3>
+          </div>
+          <p>" Fantastic app! Gets it done day in, day out!"</p>
+        </div>
+      <div>
+      <div>
+        <div class="review-wrapper">
+          <div>
+             <img src='https://kitt.lewagon.com/placeholder/users/ssaunier' class="avatar"/>
+          </div>
+          <h3>Monique, Interior Design</h3>
+        </div>
+        <p>" So many clients, too little time—I'm sold—only wish I had known about this sooner!"</p>
       </div>
-      <ul class="list-inline product-controls">
-        <li><a href=""><i class="fa fa-heart"></i></a>36</li>
-        <li><a href=""><i class="fa fa-share"></i></a>15</li>
-        <li><a href=""><i class="fa fa-star"></i></a>5</li>
-      </ul>
-    </div>
-    <div class="reviews-product">
-      <div class='reviews-product-upvote'></div>
-      <img src='https://kitt.lewagon.com/placeholder/users/ssaunier' class="product-image"/>
-      <div class='reviews-product-body'>
-        <h3>Monique, Interior Design</h3>
-        <p>So many clients, too little time—I'm sold—only wish I had known about this sooner!</p>
+      <div>
+        <div class="review-wrapper">
+          <div>
+            <img src='https://kitt.lewagon.com/placeholder/users/eschults' class="avatar"/>
+          </div>
+          <h3>Sev, Homeowner</h3>
+        </div>
+        <p>" When wondering where we are on things, chances are #<i>Active</i>Blueprint already has the scoop. Plus, one click makes the guys on my project a call or text away. Sawoosh! "</p>
       </div>
-      <ul class="list-inline product-controls">
-        <li><a href=""><i class="fa fa-heart"></i></a>45</li>
-        <li><a href=""><i class="fa fa-share"></i></a>17</li>
-        <li><a href=""><i class="fa fa-star"></i></a>5</li>
-      </ul>
-    </div>
-    <div class="reviews-product">
-      <div class='reviews-product-upvote'></div>
-      <img src='https://kitt.lewagon.com/placeholder/users/eschults' class="product-image"/>
-      <div class='reviews-product-body'>
-        <h3>Sev, Homeowner</h3>
-        <p>When wondering where we are on things, chances are #<i>Active</i>Blueprint already has the scoop. Plus, one click makes the guys on my project a call or text away. Sawoosh! </p>
+    <div>
+      <div class="review-wrapper">
+          <div>
+             <img src='https://kitt.lewagon.com/placeholder/users/krokrob' class="avatar"/>
+          </div>
+          <h3>Rob, HVAC</h3>
+        </div>
+        <p>" Has my business for life... "</p>
       </div>
-      <ul class="list-inline product-controls">
-        <li><a href=""><i class="fa fa-heart"></i></a>98</li>
-        <li><a href=""><i class="fa fa-share"></i></a>28</li>
-        <li><a href=""><i class="fa fa-star"></i></a>5</li>
-      </ul>
-    </div>
-    <div class="reviews-product">
-      <div class='reviews-product-upvote'></div>
-      <img src='https://kitt.lewagon.com/placeholder/users/krokrob' class="product-image"/>
-      <div class='reviews-product-body'>
-        <h3>Rob, HVAC</h3>
-        <p>Has my business for life... </p>
-      </div>
-        <ul class="list-inline product-controls">
-          <li><a href=""><i class="fa fa-heart"></i></a>23</li>
-          <li><a href=""><i class="fa fa-share"></i></a>71</li>
-          <li><a href=""><i class="fa fa-star"></i></a>5</li>
-        </ul>
-      </div>
-    </div>
   </div>
-
-
+  </div>
 
 
 
