--- a/app/assets/stylesheets/pages/_show_project.scss
+++ b/app/assets/stylesheets/pages/_show_project.scss
@@ -47,3 +47,12 @@
   height: 100%;
   overflow-y: scroll;
 }
+.round-color{
+  width: 30px;
+  height: 30px;
+  background: black;
+  border-radius: 50%;
+  top: 10px;
+  right: 5px;
+  position: absolute;
+}
