--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -32,7 +32,7 @@
 
     <div class="doublefields">
       <%= f.input :status, collection: [ "Stand by", "Pending Ok", "Pending Blocked", "Closed", "Adandonned", "Completed"], input_html: {  class: 'form-control' } %>
-      <%= f.input :cover, as: :attachinary %>
+      <%# f.input :cover, as: :attachinary %>
     </div>
     <div class="form-actions">
       <%= f.submit class: "btn btn-success" %>
