--- a/app/views/shared/_banner.html.erb
+++ b/app/views/shared/_banner.html.erb
@@ -1,6 +1,6 @@
 <div class="banner parallax" style="background-image: url('<%= image_path 'homepage-bg.png' %>');">
   <div class="banner-content">
-    <h1 class="text-center">the new frontier</h1>
+    <h1 class="text-center">The New Frontier</h1>
     <h2 class="text-center">of project-management transparency</h2>
       <%= link_to t(".sign_in", default: "Get Started"), new_user_session_path, class: "btn btn-success"%>
   </div>
