--- a/app/assets/stylesheets/layouts/_global.scss
+++ b/app/assets/stylesheets/layouts/_global.scss
@@ -20,3 +20,11 @@ html, body {
 	background: #6cf;
 	overflow: hidden;
 }
+
+.attachinary_container {
+	margin-top: 25px;
+	ul {
+		list-style: none;
+		padding: 0;
+	}
+}
