--- a/app/views/specialties/show.html.erb
+++ b/app/views/specialties/show.html.erb
@@ -29,13 +29,14 @@
         <button id="gantt-day" type="button" class="gantt-period btn btn-sm btn-secondary">Day</button>
         <button id="gantt-week" type="button" class="gantt-period btn btn-sm btn-secondary">Week</button>
         <button id="gantt-month" type="button" class="gantt-period btn btn-sm btn-secondary">Month</button>
-      </div>      
+      </div>
     </div>
   </div>
 </div>
 
 <%= content_for(:after_js) do %>
   <script>
+    <%# raise %>
   var railsGantt = new RailsGantt("#gantt", <%= raw JSON.generate(@tasks) %>);
   railsGantt.gantt.change_view_mode('Month')
 
