--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -9,15 +9,16 @@
     </div>
   <% end %>
   <div class="form-inputs">
-    <%= f.input :specialty, input_html: { placeholder: "plumbing, roofing, painting...", class: 'form-control' } %>
+    <%= f.input :name, input_html: { placeholder: "What is your task?", class: 'form-control' } %>
+    <%= f.input :description, input_html: { placeholder: "be specific...", class: 'form-control' } %>
+    <%= f.input :specialty, :as => :hidden, :input_html => { :value => @specialty } %>
     <div class="doublefields">
       <%= f.input :priority, input_html: { placeholder: "1, 2 , 3", class: 'form-control' } %>
       <%= f.input :budget, input_html: { placeholder: "", class: 'form-control' } %>
     </div>
-    <%= f.input :name, input_html: { placeholder: "What is your task?", class: 'form-control' } %>
-    <%= f.input :description, input_html: { placeholder: "be specific...", class: 'form-control' } %>
     <%= f.input :status, collection: [ "Stand by", "Pending Ok", "Pending Blocked", "Closed", "Adandonned", "Completed"], input_html: {  class: 'form-control' } %>
     <%= f.input :progress, input_html: { placeholder: " 35 (for 35%) -->minimum: 5  ", class: 'form-control' } %>
+    <%= f.input :custom_class, label: "Choose Task Color", collection: [ "blue", "red", "green", "orange", "grey", "yellow"], input_html: {  class: 'form-control' } %>
     <div class="button-group" style="position: relative;">
       <button type="button" class="btn btn-default btn-sm dropdown-toggle" data-toggle="dropdown">
           Add Dependencies
