--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -64,8 +64,7 @@
     </div>
   </div>
 
-  <!-- REVIEWS TABLE (FAKE but keep code in case someone wants to utilize it later) -->
-
+  <!-- REVIEWS TABLE (FAKE but keep code in case someone wants to utilize it later -->
   <div class="container review-container">
       <div>
         <div class="review-wrapper">
