--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -14,11 +14,11 @@
       </div>
     </div>
   </div>
-  <div class="row">
-    <div class="col-xs-12 col-sm-3">
+  <div class="row project-wrapper">
+    <div class="col-xs-12 col-sm-3 project-content-wrapper">
       <%= render "shared/navcard_specialties" %>
     </div>
-    <div class="col-xs-12 col-sm-9">
+    <div class="col-xs-12 col-sm-9 project-content-wrapper">
       <div class="gantt-container" style="overflow: scroll;">
         <svg id="gantt"></svg>
       </div>
