--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,6 @@
 <%= render "shared/banner" %>
 
-  <div class="banner-content">
+  <div>
     <div class="text-center" style="color: black" width="100">
       <h3> Harmony </h3>
       <h1> Success borne of communication, clear goals, and working </h1>
@@ -57,7 +57,7 @@
     </div>
   </div>
 
-  <div class="banner-content">
+  <div >
     <div class="text-center" style="color: black" width="100">
       <h3> Tried-and-true reviews | Check out the buzz: </h3>
       <p> — You guys aren't shy. alas, neither are we — </p>
