--- a/app/views/shared/_banner.html.erb
+++ b/app/views/shared/_banner.html.erb
@@ -1,7 +1,7 @@
-<div class="banner parallax" style="background-image: url('<%= image_path 'homepage-bg.png' %>');">
+<div class="banner parallax" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url('https://images.unsplash.com/photo-1505798577917-a65157d3320a?auto=format&fit=crop&w=1500&q=60&ixid=dW5zcGxhc2guY29tOzs7Ozs%3D');">
   <div class="banner-content">
-    <h1 class="text-center">The New Frontier</h1>
-    <h2 class="text-center">of project-management transparency</h2>
+    <h1><em>Active</em> Blueprint</h1>
+    <p>The new frontier of project-management transparency</p>
       <%= link_to t(".sign_in", default: "Get Started"), new_user_session_path, class: "btn btn-success"%>
   </div>
 </div>
