--- a/app/views/shared/_navcard_specialties.html.erb
+++ b/app/views/shared/_navcard_specialties.html.erb
@@ -1,10 +1,13 @@
 <% @specialties.each do |s| %>
   <div class="nav-card">
     <div class="card-title">
-      <h2><%= link_to "#{s.name.upcase}", project_specialty_path(@project,s) %></h2>
+      <h2><%= link_to "#{s.name.upcase}", project_specialty_path(@project,s) %> </h2>
       <p><%= s.start.strftime("%Y %b %d") %> - <%= s.finish.strftime("%Y %b %d") %></p>
     </div>
     <div class="round-color <%= s.custom_class %>"></div>
+    <div class="edition-options">
+      <%= link_to "", edit_project_specialty_path(@project, s), class:"fa fa-pencil" %> <%= link_to "", project_specialty_path(s), class:'fa fa-trash', method: :delete %>
+    </div>
     <div class="card-avatars">
       <ul class="list-inline">
         <% s.tasks.each do |task| %>
@@ -17,7 +20,7 @@
             <% else %>
               <%= avatar_url = cl_image_tag task.user.photo.path, height: 30, width: 30, :crop=>"fill" %>
             <% end %>
-            <%= image_tag avatar_url, class: "avatar dropdown-toggle", id: "navbar-wagon-menu", "data-toggle" => "dropdown" %>
+            <%= image_tag avatar_url, class: "avatar "%>
           <% end %>
         </li>
         <% end %>
