--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -16,9 +16,23 @@
 .card-title h2 {
   font-size: 18px;
   margin: 0;
+  color: #666666;
 }
 
 .card-title p {
+  font-size: 12px;
+  opacity: 0.7;
+  font-family: $light-font;
+}
+
+.card-details {
+  position: absolute;
+  margin-top: 35px;
+  top: 10px;
+  left: 20px;
+}
+
+.card-details p {
   font-size: 12px;
   opacity: 0.7;
   font-family: $light-font;
