--- a/app/assets/stylesheets/pages/_show_project.scss
+++ b/app/assets/stylesheets/pages/_show_project.scss
@@ -54,6 +54,10 @@
   height: 100vh;
 }
 
+.tasks-details{
+  margin-top: 20px;
+}
+
 .project-content-wrapper{
   height: 100%;
   overflow-y: scroll;
@@ -63,6 +67,6 @@
   height: 30px;
   border-radius: 50%;
   top: 10px;
-  right: 5px;
+  right: 10px;
   position: absolute;
 }
